--- a/main.css
+++ b/main.css
@@ -99,10 +99,97 @@ body{
 	-webkit-transition:all 0.2s ease;
 	-o-transition:all 0.2s ease;
 	-moz-transition:all 0.2s ease;
+	position:relative;
 }
 
 .box .button:hover{
 	background-position:140px center;
 	border:2px solid rgba(255,255,255,1);
 }
+
+.box .line{
+	background-color:#FFF;
+}
+/*设置顶部线条*/
+.box .line-top{
+	width:0px;
+	height:2px;
+	display:block;
+	position:absolute;
+	top:-2px;
+	left:-100%;
+	transition:all 0.2s ease;
+	-webkit-transition:all 0.2s ease;
+	-os-transition:all 0.2s ease;
+	-moz-transition:all 0.2s ease;
+}
+
+.box .button:hover .line-top{
+	width:180px;
+	left:-2px;
+}
+/*设置底部线条:从右向左过渡到按钮的下边框位置*/
+.box .line-bottom{
+	width:0px;
+	height:2px;
+	display:block;
+	position:absolute;
+	bottom:-2px;
+	right:-100%;
+	transition:all 0.2s ease;
+	-webkit-transition:all 0.2s ease;
+	-os-transition:all 0.2s ease;
+	-moz-transition:all 0.2s ease;
+}
+
+.box .button:hover .line-bottom{
+	width:180px;
+	right:-2px;
+}
+
+/*
+	设置左侧线条:从下向上过渡到按钮的左边框位置
+	宽度不变，高度由0变为(45+2*2)px
+*/
+
+.box .line-left{
+	width:2px;
+	height:0px;
+	display:block;
+	position:absolute;
+	left:-2px;
+	bottom:-100%;
+	transition:all 0.2s ease;
+	-webkit-transition:all 0.2s ease;
+	-os-transition:all 0.2s ease;
+	-moz-transition:all 0.2s ease;
+}
+
+.box .button:hover .line-left{
+	height:49px;
+	bottom:-2px;
+}
+/*
+	设置右侧线条:从上向下过渡到按钮的左边框位置
+	宽度不变，高度由0变为(45+2*2)px
+	初始位置：top:-100%
+	hover时位置：top:-2px
 	
+*/
+.box .line-right{
+	width:2px;
+	height:0px;
+	display:block;
+	position:absolute;
+	right:-2px;
+	top:-100%;
+	transition:all 0.2s ease;
+	-webkit-transition:all 0.2s ease;
+	-os-transition:all 0.2s ease;
+	-moz-transition:all 0.2s ease;
+}
+.box .button:hover .line-right{
+	height:49px;
+	top:-2px;
+}
+
